--- a/pom.xml
+++ b/pom.xml
@@ -46,15 +46,17 @@
       <artifactId>shiro-ehcache</artifactId>
       <version>1.2.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
-      　　<groupId>org.slf4j</groupId>
-      　　<artifactId>slf4j-api</artifactId>
-      　　<version>1.7.25</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
-      　　<groupId>org.slf4j</groupId>
-      　　<artifactId>slf4j-log4j12</artifactId>
-      　　<version>1.7.25</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
     </dependency>
     <dependency>
       <groupId>org.apache.shiro</groupId>
@@ -217,20 +219,19 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.16.10</version>
-      <scope>provided</scope>
+      <version>1.16.20</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.7.0</version>
+      <version>2.8.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.7.0</version>
+      <version>2.8.0</version>
     </dependency>
     <!--自定义标签-->
     <dependency>
@@ -243,12 +244,23 @@
 
   <build>
     <finalName>AuthRealm</finalName>
+    <!--参考：https://blog.csdn.net/jeffleo/article/details/55271858-->
     <resources>
       <resource>
         <directory>src/main/java</directory>
         <includes>
+          <include>**/*.properties</include>
           <include>**/*.xml</include>
         </includes>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/*.properties</include>
+          <include>**/*.xml</include>
+        </includes>
+        <filtering>false</filtering>
       </resource>
     </resources>
     <plugins>
@@ -268,4 +280,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
