--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,13 @@
       <artifactId>shiro-ehcache</artifactId>
       <version>1.2.2</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+    <!-- slf4j-api -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.25</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+    <!-- slf4j-api -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -165,7 +165,7 @@
       <artifactId>spring-test</artifactId>
       <version>4.0.2.RELEASE</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <!-- fastjson -->
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
@@ -177,13 +177,13 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.6</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+    <!-- freemarker -->
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
       <version>2.3.20</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <!-- commons-lang3 -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
@@ -209,29 +209,29 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.2</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper -->
+    <!-- pagehelper -->
     <dependency>
       <groupId>com.github.pagehelper</groupId>
       <artifactId>pagehelper</artifactId>
       <version>5.1.2</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <!-- lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.16.20</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+    <!-- springfox-swagger2 -->
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.8.0</version>
+      <version>2.7.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+    <!-- springfox-swagger-ui -->
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.8.0</version>
+      <version>2.7.0</version>
     </dependency>
     <!--自定义标签-->
     <dependency>
